# genomecomb

./: .gitignore  Makefile.in  README.md  README.txt  cg  cgsh  cgworker  configure  configure.in  genomecomb.tea  init.tcl  newfile  pkgIndex.tcl  start_hbb.sh  try.tcl
cg_viz/: cg_viz.tcl
doc/: queries.txt
docs/: bcol.html  bcol.wiki  cg_10x2tsv.html  cg_annotate.html  cg_bam2cram.html  cg_bam2fastq.html  cg_bam2reg.html  cg_bam2sam.html  cg_bam_histo.html  cg_bam_index.html  cg_bam_sort.html  cg_bamreorder.html  cg_bams2crams.html  cg_bcol.html  cg_bcol_get.html  cg_bcol_make.html  cg_bcol_table.html  cg_bcol_update.html  cg_bed2genetsv.html  cg_bed2tsv.html  cg_bgzip.html  cg_cat.html  cg_cg2sreg.html  cg_cg2tsv.html  cg_checktsv.html  cg_clc2tsv.html  cg_collapsealleles.html  cg_colvalue.html  cg_compound.html  cg_compress.html  cg_convcgcnv.html  cg_convcgsv.html  cg_correctvariants.html  cg_coverage_report.html  cg_covered.html  cg_cplinked.html  cg_csv2tsv.html  cg_depth_histo.html  cg_download_biograph.html  cg_download_mart.html  (+161 more)
docs-src/: contact.html  index.html  install.html  nme  old_releases.html
extern-ix86/: bcftools  bgzip  fastq-stats  gnusort8  lz4c  lz4index  lz4ra  razip  samtools  tabix  zstd-mt  zstdindex  zstdra
extern-src/: adapted_Makefile_zstd-mt  configureStrelkaGermlineWorkflow.py  gnusort8_sort.c  hap.py.sh  (+4 more)
rust/scywalker-report/: Cargo.toml  README.md  install.sh
rust/scywalker-report/src/: cell_info.rs  exons_vs_length.rs  knee.rs  layout.rs  main.rs  parse_bam.rs  parse_cramino.rs  read_assignment.rs  style.css  utils.rs
(+1427 files in other folders)
